# blog

./: .env  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/category/: apps.py  models.py  views.py
apps/posts/: models.py  serializers.py  views.py
apps/tag/: apps.py  models.py  views.py
apps/user/: models.py  serializers.py  views.py
blog/: admin.py  models.py  serializers.py  settings.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200724_0208.py  0002_auto_20200818_1143.py  0003_auto_20200724_1604.py  0003_auto_20200819_1514.py  0004_auto_20200822_1555.py  0005_auto_20200826_0105.py
config/: apps.py  models.py
config/migrations/: 0001_initial.py
config/nginx/: myblog.conf
db/: abstract_model.py
marvel/: models.py  tasks.py
marvel/migrations/: 0001_initial.py
myblog/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
myblog/settings/: base.py  development.py  production.py
script/: fake_data.py  run_uvicorn.py
services/marvel/: base.py  character.py  comics.py  creators.py  endpoint.py  events.py  exceptions.py  marvel.py  requester.py  series.py  stories.py
user/: models.py  serializers.py  views.py
user/migrations/: 0001_initial.py  0002_auto_20200725_1543.py  0002_auto_20200826_0105.py  0003_auto_20200725_1545.py  0003_auto_20200826_0115.py  0004_auto_20200728_2232.py  0004_auto_20200831_2251.py  0005_auto_20200901_1019.py  0005_remove_user_phone.py  0006_auto_20200731_0253.py  (+2 more)
utils/: email.py  permissions.py
(+4 files in other folders)
